--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   "homepage": "https://github.com/susulone/tamk-VCT-testing-project#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
+    "docdash": "^1.2.0",
     "jest": "^27.5.1",
-    "jest-extended": "^2.0.0"
+    "jest-extended": "^2.0.0",
+    "jsdoc": "^3.6.10",
+    "jsdoc-to-markdown": "^7.1.1"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
