--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "jsdoc": "jsdoc -a all -c jsdoc.json -r -R README.md index.js -d docs/jsdoc && jsdoc2md --files index.js > docs/API.md",
+    "jsdoc": "jsdoc -a all -c jsdoc.json -r --readme README.md index.js -d docs/jsdoc && jsdoc2md --files index.js > docs/API.md",
     "test": "jest --watchAll --verbose",
     "testAll": "jest --verbose --coverage --detectOpenHandles"
   },
@@ -37,6 +37,7 @@
     "jsdoc-to-markdown": "^7.1.1"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "readline-sync": "^1.4.10"
   }
 }
