--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "scripts": {
+    "start": "node index.js",
     "jsdoc": "jsdoc -a all -c jsdoc.json -r --readme README.md index.js -d docs/jsdoc && jsdoc2md --files index.js > docs/API.md",
     "test": "jest --watchAll --verbose",
     "testAll": "jest --verbose --detectOpenHandles --coverage --collectCoverageFrom=src/**/*.{js,jsx}"
