--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/docs/**",
+      "!**/coverage/**"
     ],
     "setupFilesAfterEnv": [
       "jest-extended/all"
@@ -35,6 +38,7 @@
   "homepage": "https://github.com/susulone/tamk-VCT-testing-project#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
+    "babel-jest": "^27.5.1",
     "docdash": "^1.2.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
